--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
+<!DOCTYPE HTML>
 <html>
 <head>
 	<title>Home</title>
-		
-	<style type="text/css">
-		body{color:red;}
-		
-		
-		
-	</style>
+	
+	<link rel="stylesheet" type="text/css" ref="style.css">
+	<script type="text/javascript" src="main.js"></script>
 
 </head>
 <body>
