--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Home</title>
 	
-	<link rel="stylesheet" type="text/css" ref="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="main.js"></script>
 
 </head>
 <body>
 <div id="gameContainer">
-Hello World
+Hello World!
+
 
 
 </div>
