--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <script src='js/box2d/dynamics/joints/b2PulleyJointDef.js'></script>
     <script src='js/box2d/dynamics/joints/b2RevoluteJoint.js'></script>
     <script src='js/box2d/dynamics/joints/b2RevoluteJointDef.js'></script>
+		<!-- box2djs END -->
 
 
 
@@ -85,7 +86,7 @@
 <body>
 <div id="gameContainer">
 Hello World!
-
+<canvas id="game" width="100%" height="500px"></canvas>
 
 
 </div>
