--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 		<!-- libs -->
 		<!--[if IE]><script type="text/javascript" src="lib/excanvas.js"></script><![endif]-->
-	    <script src="lib/prototype-1.6.0.2.js"></script>
+	    <!--<script src="lib/prototype-1.6.0.2.js"></script>-->
 
 		<!-- box2djs -->
-	    <script src='js/box2d/common/b2Settings.js'></script>
+	    <!--<script src='js/box2d/common/b2Settings.js'></script>
 	    <script src='js/box2d/common/math/b2Vec2.js'></script>
 	    <script src='js/box2d/common/math/b2Mat22.js'></script>
 	    <script src='js/box2d/common/math/b2Math.js'></script>
@@ -74,7 +74,7 @@
 	    <script src='js/box2d/dynamics/joints/b2PulleyJoint.js'></script>
 	    <script src='js/box2d/dynamics/joints/b2PulleyJointDef.js'></script>
 	    <script src='js/box2d/dynamics/joints/b2RevoluteJoint.js'></script>
-	    <script src='js/box2d/dynamics/joints/b2RevoluteJointDef.js'></script>
+	    <script src='js/box2d/dynamics/joints/b2RevoluteJointDef.js'></script>-->
 		<!-- box2djs END -->
 
         <script type="text/javascript" src="js/raf-shim.js"></script>
