working on getting this thing to like my code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<!-- libs -->
 		<!--[if IE]><script type="text/javascript" src="lib/excanvas.js"></script><![endif]-->
-	    <!--<script src="lib/prototype-1.6.0.2.js"></script>-->
+	    <script src="lib/prototype-1.6.0.2.js"></script>
 
 		<!-- box2djs -->
 	    <!--<script src='js/box2d/common/b2Settings.js'></script>
@@ -88,6 +88,6 @@
 
 	</head>
 	<body>
-		<canvas id="game" width='1024' height='600'></canvas>
+		<canvas id="game"></canvas>
 	</body>
 </html>
